@@ -792,9 +792,9 @@ sub file2table
 	closedir $dh or croak "Can't close '$searchdir': $!";
 
 	my $tmpfn = $file;
-	if ($ext and $req ) {
+	if ($ext && $req) {
             # File extension required
-            $tmpfn =~ s/$ext$//i			or  return;
+            $tmpfn =~ s/$ext$//i or return;
             }
 	}
 
@@ -806,7 +806,7 @@ sub file2table
     defined $meta->{f_lockfile} && $meta->{f_lockfile} and
 	$meta->{f_fqln} = $meta->{f_fqbn} . $meta->{f_lockfile};
 
-    $dir and $tbl = File::Spec->catfile ($dir, $tbl) unless ($user_spec_file);
+    $dir && !$user_spec_file  and $tbl = File::Spec->catfile ($dir, $tbl);
     $meta->{table_name} = $tbl;
 
     return $tbl;
@@ -881,6 +881,8 @@ my %reset_on_modify = (
     f_lockfile => "f_fqfn", # forces new file2table call
     );
 
+my %compat_map = map { $_ => "f_$_" } qw( file ext lock lockfile );
+
 sub register_reset_on_modify
 {
     my ($proto, $extra_resets) = @_;
@@ -888,9 +890,18 @@ sub register_reset_on_modify
     return;
     } # register_reset_on_modify
 
+sub register_compat_map
+{
+    my ($proto, $extra_compat_map) = @_;
+    %compat_map = (%compat_map, %$extra_compat_map);
+    return;
+    } # register_compat_map
+
 sub get_table_meta_attr
 {
     my ($class, $meta, $attrib) = @_;
+    exists $compat_map{$attrib} and
+	$attrib = $compat_map{$attrib};
     exists $meta->{$attrib} and
 	return $meta->{$attrib};
     return;
@@ -899,11 +910,19 @@ sub get_table_meta_attr
 sub set_table_meta_attr
 {
     my ($class, $meta, $attrib, $value) = @_;
+    exists $compat_map{$attrib} and
+	$attrib = $compat_map{$attrib};
+    $class->table_meta_attr_changed ($meta, $attrib, $value);
+    $meta->{$attrib} = $value;
+    } # set_table_meta_attr
+
+sub table_meta_attr_changed
+{
+    my ($class, $meta, $attrib, $value) = @_;
     defined $reset_on_modify{$attrib} and
 	delete $meta->{$reset_on_modify{$attrib}} and
 	delete $meta->{initialized};
-    $meta->{$attrib} = $value;
-    } # set_table_meta_attr
+    } # table_meta_attr_changed
 
 # ====== FILE OPEN =============================================================
 
