@@ -2,17 +2,20 @@
 
 DBI::Changes - List of significant changes to the DBI
 
-(As of $Date: 2010-09-09 11:05:11 +0100 (Thu, 09 Sep 2010) $ $Revision: 14385 $)
+(As of $Date: 2010-09-16 06:48:35 +0100 (Thu, 16 Sep 2010) $ $Revision: 14407 $)
 
 =cut
 
-=head2 Changes in DBI 1.614 (svn r14385) 9th September 2010
+=head2 Changes in DBI 1.614 (svn r14409) 16th September 2010
 
+  Fixed bind_param () in DBI::DBD::SqlEngine (rt#61281)
   Fixed internals to not refer to old perl symbols that
     will no longer be visible in perl >5.13.3 (Andreas Koenig)
     Many compiled drivers are likely to need updating.
   Fixed issue in DBD::File when absolute filename is used as table name
     (Jens Rehsack)
+  Croak manually when file after tie doesn't exists in DBD::DBM
+    when it have to exists (Jens Rehsack)
 
   Changed 50dbm_simple to simplify and fix problems (Martin J. Evans)
   Changed 50dbm_simple to skip aggregation tests when not using
@@ -28,6 +31,8 @@ DBI::Changes - List of significant changes to the DBI
   Added improved developers documentation for DBI::DBD::SqlEngine
   Added guides how to write DBI drivers using DBI::DBD::SqlEngine
     or DBD::File 
+  Added register_compat_map() and table_meta_attr_changed() to
+    DBD::File::Table
 
 =head2 Changes in DBI 1.613 (svn r14271) 22nd July 2010
 
